# sniper-bot

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run.py  start.bat
config/: example.yaml  live.yaml
docs/: PRD.md
migrations/: env.py
migrations/versions/: 0001_initial.py
scripts/: backtest.bat  bot-demo.bat  bot-run.bat  dashboard.bat  fresh-start.bat  scan.bat  status.bat
src/sniper_bot/: __init__.py  __main__.py  ai.py  ai_advisor.py  alerts.py  app.py  backtest.py  cli.py  config.py  dashboard.py  data.py  exchange.py  exchange_base.py  execution.py  indicators.py  logging_config.py  logging_utils.py  positions.py  reporting.py  risk.py  scanner.py  storage.py  strategy.py  ws_stream.py
tests/: test_backtest.py  test_clients.py  test_config.py  test_execution.py  test_indicators.py  test_phase2.py  test_phase3.py  test_phase4.py  test_positions.py  test_risk.py  test_scanner.py  test_storage.py  test_strategy.py
